--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
+    "xml-beautifier": "^0.4.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
