--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "firebase": "^5.5.7",
     "modernizr": "^3.7.1",
     "ngx-toastr": "^11.1.2",
+    "ngx-xml2json": "^1.0.2",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "xml-beautifier": "^0.4.3",
+    "xml2js": "^0.4.23",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
