--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/chart.js": "^2.9.19",
+    "angular-bootstrap-md": "^9.1.0",
     "angularfire2": "^5.2.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "core-js": "^3.3.2",
     "firebase": "^5.5.7",
+    "hammerjs": "^2.0.8",
     "modernizr": "^3.7.1",
     "ngx-toastr": "^11.1.2",
     "ngx-xml2json": "^1.0.2",
